<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_all">
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">
        <View
                android:layout_width="match_parent"
                android:layout_height="120dp"/>
        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                style="@style/CDK.ShapeableImageView"
                android:src="@mipmap/ic_launcher"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textSize="20sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="start"
                android:text="@string/about_open_source"/>
        <candyenk.android.widget.Item
                android:id="@+id/gson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:title="Gson"
                android:icon="@drawable/gson"
                android:summary="com.google.code.gson:gson:2.10"/>
        <candyenk.android.widget.Item
                android:id="@+id/luaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:title="LuaJ"
                android:icon="@drawable/luaj"
                android:summary="org.luaj:luaj-jse:3.0.1"/>
        <candyenk.android.widget.Item
                android:id="@+id/glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:title="Glide"
                android:icon="@drawable/glide"
                android:summary="com.github.bumptech.glide:glide:4.14.2"/>
        <TextView
                android:id="@+id/copyright"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                android:text="@string/app_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                tools:ignore="SmallSp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="bottom"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>